--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ludo Game</title>
+    <title>Nazmul's Ludo Game</title>
     <link rel="manifest" href="manifest.json">
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f0f0f0; }
@@ -24,7 +24,8 @@
     </style>
 </head>
 <body>
-    <h1>Ludo Game</h1>
+    <h1>Nazmul's Ludo Game</h1>
+    <p>Welcome, Nazmul!</p>
     <div id="board"></div>
     <div id="dice">Roll: <span id="diceValue">-</span></div>
     <button id="rollDice">Roll Dice</button>
